fix too wide srp import input box

--- a/src/ui/components/sidebar/sidebar.module.scss
+++ b/src/ui/components/sidebar/sidebar.module.scss
@@ -27,7 +27,7 @@
   }
   
   :global(.ant-menu) {
-    background-image: url("../assets/background.jpg");
+    background-image: url("../assets/background_blur.jpg");
     background-size: cover;
     @media (min-width: 768px) {
       flex-basis: 20rem;
